--- a/index.html
+++ b/index.html
@@ -9,8 +9,115 @@
     <script src="https://kit.fontawesome.com/cf80fdf0c7.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header></header>
-    
+    <div class="header-add"> 
+        <div class="header-addBlock container"> 
+            <div class="info-block"> 
+                <div class="item"> 
+                    <div class="location">
+                        <i class="fa-solid fa-location-dot"></i>
+                        <div class="text">
+                            <span>Ваш регион доставки:</span>
+                            <select name="City">
+                                <option value="1">Москва</option>
+                                <option value="2">Тольятти</option>
+                                <option value="3">Самара</option>
+                                <option value="4">Ульяновск</option>
+                            </select>
+                        </div>
+                    </div> 
+                    <nav> 
+                        <ul> 
+                            <li><a href="#!">Магазины</a></li> 
+                            <li><a href="#!">Помощь</a></li> 
+                            <li><a href="#!">Блоги</a></li> 
+                        </ul> 
+                    </nav> 
+                </div> 
+                <div class="item"> 
+                    <ul> 
+                        <li> 
+                            <div class="icon"><img src="imgs/auto.svg" alt=""></div> 
+                            <span>Бесплатная доставка*</span> 
+                        </li> 
+                        <li> 
+                            <div class="icon"><img src="imgs/card.svg" alt=""></div> 
+                            <span>Оплата при получении</span> 
+                        </li> 
+                        <li> 
+                            <div class="icon"><img src="imgs/return.svg" alt=""></div> 
+                            <span>Возврат в течение 14 дней</span> 
+                        </li> 
+                    </ul> 
+                </div> 
+            </div> 
+        </div> 
+    </div>
+     
+    <header>
+        <section class="header container">
+            <div class="info_block">
+                <div class="item category">
+                    <ul>
+                        <li class="active">Мужчинам</li>
+                        <li>Женщинам</li>
+                        <li>Детям</li>
+                    </ul>
+                </div>
+                <div class="item logo-block">
+                    <div class="logo">
+                        <img src="imgs/logo.png" alt="Logo">
+                    </div>
+                </div>
+                <div class="item functions">
+                    <ul>
+                        <li>
+                            <a href="">
+                                <div class="icon"><img src="imgs/Contact.svg" alt=""></div>
+                                <span>Войти</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <div class="icon"><img src="imgs/Star.svg" alt=""></div>
+                                <span>Избранное</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <div class="icon"><img src="imgs/shopCart.svg" alt=""></div>
+                                <span>Корзина</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <div class="icon"><img src="imgs/Searcher.svg" alt=""></div>
+                                <span>Поиск</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </header>
+    <div class="header-category">
+        <div class="header-categoryBlock container">
+            <ul>
+                <li><a href="">Новинки</a></li>
+                <li><a href="">Сноуборд</a></li>
+                <li><a href="">Лыжи</a></li>
+                <li><a href="">Скейт</a></li>
+                <li><a href="">Лонгборд</a></li>
+                <li><a href="">Вейкборд</a></li>
+                <li><a href="">Серф</a></li>
+                <li><a href="">Sup</a></li>
+                <li><a href="">Одежда</a></li>
+                <li><a href="">Обувь</a></li>
+                <li><a href="">Аксессуары</a></li>
+                <li><a href="">Бренды</a></li>
+                <li class="active"><a href="">Распродажа</a></li>
+            </ul>
+        </div>
+    </div>
     <main></main>
 
     <footer></footer>
